# credit_risk_project

./: Dockerfile  README.md  app_streamlit.py  pyproject.toml  requirements.txt
api/: app.py  test_api.py
data/: generated_credit_data.csv
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
models/: full_pipeline.joblib
notebooks/: credit_risk_exploration_training.ipynb  credit_risk_modeling.ipynb
src/: data_generation.py  data_visualization.py  features.py  model_training.py  prediction_service.py  preprocessing.py
